Tue Feb 17 10:59:10 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/syntax/calling_methods.rdoc: Fix documentation for "calling_methods"
	  Patch by @sos4nt [fix GH-830][ci skip]

Tue Feb 17 10:53:29 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_file_expand_path_internal): do not make invalid
	  (or ADS) path if the path has a drive letter, the result also
	  should have be under it.  [ruby-core:68130] [Bug #10858]

Tue Feb 17 10:47:20 2015  Iain Beeston  <iain.beeston@gmail.com>

	* hash.c: Added docs to explain that #include? and #member? do not
	  check member equality
	* lib/set.rb: ditto

Mon Feb 16 20:58:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_massign): optimization for special case,
	  assignments by aset or attrset.
	  http://kokizzu.blogspot.jp/2015/02/c-java-hhvm-ruby-nodejsrhinojscspidermo.html
	  http://www.atdot.net/~ko1/diary/201502.html#d16

Sun Feb 15 10:41:23 2015  Sho Hashimoto  <sho-h@ruby-lang.org>

	* doc/standard_library.rdoc: [DOC] delete removed libraries.
	  [misc #10843] [ci skip]

Sat Feb 14 12:20:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rand_random_number): add a method to return a random
	  number like SecureRandom to Random::Formatter.

	* lib/securerandom.rb (random_bytes): move to Random::Formatter,
	  the base method of the module.

Sat Feb 14 12:01:32 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_raw_seed): extract platform dependent random
	  seed initialization function as a new method Random.raw_seed.

	* lib/securerandom.rb (SecureRandom): use Random.raw_seed.

Sat Feb 14 00:49:37 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/coverage/coverage.c: Add Coverage.peek_result.  Allows you to
	  capture coverage information without stopping the coverage tool.
	  [ruby-core:67940] [Feature #10816]

	* test/coverage/test_coverage.rb: test for change.

Fri Feb 13 21:52:05 2015  Yusuke Endoh  <mame@tsg.ne.jp>
